scrollbar fix and image max height set for cart

--- a/css/stylesmenu.css
+++ b/css/stylesmenu.css
@@ -8,18 +8,47 @@ body, html {
   margin: 0;
 }
 
-body::-webkit-scrollbar {
-  width: 1em;
+
+body::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #F5F5F5;
 }
 
-body::-webkit-scrollbar-track {
-  background: black;
+body::-webkit-scrollbar
+{
+	width: 1px;
+	background-color: #F5F5F5;
 }
 
-/* Handle */
-body::-webkit-scrollbar-thumb {
-  background: #888;
+body::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #555;
 }
+
+#style-1::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #F5F5F5;
+}
+
+#style-1::-webkit-scrollbar
+{
+	width: 1px;
+	background-color: #F5F5F5;
+}
+
+#style-1::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #555;
+}
+
 
 .bg {
   /* The image used */
@@ -55,7 +84,10 @@ body.modal-open-noscroll {
 }
 
 .thumbn{
-  max-width: 50px;
+  max-width: 100px;
+  max-height: 70px;
+  margin-left: 60px;
+
 }
 
 .close:hover {
